<resources>
    <string name="app_name">BikeDaCity</string>

    <!-- About Activity related strings -->
    <string name="about_entry">About BikeDaCity</string>
    <string name="about_dialog_title">About</string>S
    <string name="devel_title">Developer</string>
    <string name="devel_name">Giuliano Peraz</string>
    <string name="devel_email">giuliano.peraz@gmail.com</string>
    <string name="info_source_title">Information Sources</string>
    <string name="source_name_1">CityBikes</string>
    <string name="source_name_2">OSMDroid</string>
    <string name="source_site_1">citybik.es</string>
    <string name="source_site_2">github.com/osmdroid/osmdroid/</string>
    <string name="title_activity_about">About</string>

    <!-- Strings related to Settings -->
    <string name="title_activity_settings">Settings</string>
    <string name="pref_header_location">Location Settings</string>
    <string name="pref_header_map">Map Settings</string>

    <!-- Location settings -->
    <string name="pref_location_interval_title">Set interval duration</string>
    <string-array name="pref_interval_location_entries">
        <item>5 seconds</item>
        <item>30 seconds</item>
        <item>1 minute</item>
    </string-array>
    <string-array name="pref_interval_location_values">
        <item>5</item>
        <item>30</item>
        <item>60</item>
    </string-array>

    <!-- Map settings -->
    <string-array name="pref_map_provider_entries">
        <item>Google Map App</item>
        <item>Open Street Map App</item>
        <item>OSMDroid</item>
    </string-array>
    <string-array name="pref_map_provider_values">
        <item>-1</item>
        <item>0</item>
        <item>1</item>
    </string-array>

    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string-array name="pref_default_view_entries">
        <item>Available places</item>
        <item>Free bikes</item>
    </string-array>
    <string-array name="pref_default_view_values">
        <item>0</item>
        <item>1</item>
    </string-array>

    <string-array name="pref_map_refresh_entries" >
        <item>5 seconds</item>
        <item>10 seconds</item>
        <item>15 seconds</item>
        <item>30 seconds</item>
    </string-array>
    <string-array name="pref_map_refresh_values" >
        <item>5</item>
        <item>10</item>
        <item>15</item>
        <item>30</item>
    </string-array>

    <!-- Key used for shared preferences -->
    <string name="location_switch_key">location_switch</string>
    <string name="location_interval_list_key">location_interval_list</string>
    <string name="map_provider_list_key">map_provider_list_key</string>
    <string name="map_default_view_list_key">default_view</string>
    <string name="map_refresh_switch_key">map_referesh_switch</string>
    <string name="map_refresh_list_key">map_refresh</string>
    <string name="min_time_key">minTime</string>
    <string name="min_dist_key">minDistance</string>

    <!-- Titles -->
    <string name="pref_title_location">Enable location service</string>
    <string name="pref_location_category_name">Location</string>
    <string name="pref_map_category_name">Map Settings</string>
    <string name="pref_map_provider_title">Map Provider</string>
    <string name="pref_map_refresh_switch_title">Enable autorefresh</string>
    <string name="pref_default_view_title">Default map view</string>
    <string name="pref_map_refresh_title">Autorefresh interval</string>

    <!-- Summaries -->
    <string name="pref_location_summary">Enable this if you want to request your location when the
        interval specified is elapsed instead of every time this app is started.</string>
    <string name="google_map_app_summary">Use Google Map application</string>
    <string name="osm_app_summary">Use Open Street Map application</string>
    <string name="osmdroid_app_summary">Use the OSMDroid library with more features</string>
    <string name="map_refresh_summary">Enable this for autorefreshing the map</string>
    <string name="default_view_summary">Select the view you use more frequently</string>

    <!-- URLs -->
    <string name="nominatim_service_query">https://nominatim.openstreetmap.org/reverse?format=json
    </string>

    <!-- Alert Dialog error strings -->
    <string name="err_dialog_no_ext_storage_title">ERROR!</string>
    <string name="err_dialog_no_ext_storage_message">Without eternal storage this app can\'t work</string>
    <string name="err_dialog_no_ext_storage_button">Exit</string>
    <string name="err_dialog_perm_not_granted_title">Exiting application</string>
    <string name="err_dialog_perm_not_granted_message">The application can\'t run without accessing
    your location and without writing to the external storage. Please reconsider to grant it access.</string>
    <string name="err_dialog_perm_not_granted_button">Exit</string>
    <string name="err_dialog_no_city_found_title">No bikes</string>
    <string name="err_dialog_no_city_found_message">BikeDaCity isn\'t able to find a bike sharing service here</string>
    <string name="err_dialog_no_city_found_button">Exit</string>

    <!-- Alert dialog for permissions rationale -->
    <string name="perm_dialog_title">Why Permissions?</string>
    <string name="perm_dialog_message">This app will use GPS location for knowing
        which are the nearest stations to you. This app will also request you to allow writing
        external storage. It is requested by Open Street Map to store locally the map tiles,
        avoiding them being downloaded from internet each time this app is run.
    </string>
    <string name="perm_dialog_button">OK, I read</string>

    <!-- Alert dialog for enabling provider-->
    <string name="enable_provider_title">Enable GPS</string>
    <string name="enable_provider_message">Please enable the GPS provider for letting this app to work
    properly.</string>
    <string name="enable_provider_positive_button">Enable GPS</string>
    <string name="enable_provider_negative_button">Exit app</string>

    <!-- Exceptions messages -->
    <string name="no_provider_enabled">No provider has been enabled</string>
    <string name="no_gps_provider_enabled">GPS has to be enabled</string>

    <!-- Information box text -->
    <string name="infobox_init_app">Initializing application&#8230;</string>
    <string name="infobox_request_city">Finding city&#8230;</string>
    <string name="infobox_station_ordered">Computing station distances&#8230;</string>
    <string name="infobox_starting_text">Initializing map&#8230;</string>
    <string name="infobox_adding_stations">Adding stations to the map&#8230;</string>
    <string name="infobox_current_location">Current location: %1$f, %2$f</string>
    <string name="infobox_waiting_location">Waiting for location update&#8230;</string>
    <string name="infobox_make_stations">Making stations for the map&#8230;</string>


    <!-- Station list contents -->
    <string name="station_list_distance">Distance: %1$d m</string>
    <string name="station_list_availability">Availablity: %1$d %2$s</string>
    <string name="station_list_details">%1$s  %2$s</string>
    <string name="station_list_free_places">slots</string>
    <string name="station_list_free_bikes">bikes</string>

    <!-- Marker related strings -->
    <string name="marker_description_available_places">Available places: %1$d\nDistance: %2$d\nAvailability: %3$s</string>
    <string name="marker_description_available_bikes">Available bikes: %1$d\nDistance: %2$d</string>
    <string name="marker_my_location_name">Me</string>
    <string name="marker_my_location_description">I\'m here!</string>

</resources>
